fix title; update readme

--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,5 @@
 ---
-title: 'ClassicUO | The script runner for Deno'
+title: 'ClassicUO Web Documentation'
 layout: layouts/main.njk
 scripts:
   - asciinema-player.js
