Update links to https://play.classicuo.org

--- a/index.njk
+++ b/index.njk
@@ -13,7 +13,7 @@ styles:
     <h1 class="text-5xl font-bold mb-8">Ultima Online <br>for the web</h1>
 
     <div class="flex flex-row space-x-4">
-      <a href="https://classicuo.org"
+      <a href="https://play.classicuo.org"
          class="bg-red-600 hover:bg-red-700 transition-colors duration-300 rounded-lg shadow px-5 py-3 text-white text-lg">
         Play now
       </a>
@@ -118,7 +118,7 @@ styles:
 </div>
 
 <div class="main my-12 py-12 flex items-center justify-center">
-  <a href="https://classicuo.org"
+  <a href="https://play.classicuo.org"
      class="bg-red-600 hover:bg-red-700 transition-colors duration-300 rounded-lg shadow px-5 py-3 text-white text-lg">
     Play now
   </a>
