--- a/_includes/layouts/main.njk
+++ b/_includes/layouts/main.njk
@@ -102,15 +102,15 @@
   </div>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
-<script type="text/javascript">
-  docsearch({
-    apiKey: 'd18e7884c2a304ed35d61c440524eb22',
-    indexName: 'ClassicUO',
-    container: '#docsearch',
-    appId: 'AM3UJ98ONF',
-    debug: false,
-  });
-</script>
+{#<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>#}
+{#<script type="text/javascript">#}
+{#  docsearch({#}
+{#    apiKey: 'd18e7884c2a304ed35d61c440524eb22',#}
+{#    indexName: 'ClassicUO',#}
+{#    container: '#docsearch',#}
+{#    appId: 'AM3UJ98ONF',#}
+{#    debug: false,#}
+{#  });#}
+{#</script>#}
 </body>
 </html>
