+ point to CUO discord :D

--- a/_includes/layouts/main.njk
+++ b/_includes/layouts/main.njk
@@ -83,7 +83,7 @@
           </a>
         </li>
         <li class="text-lg hover:text-primary transition-colors duration-300">
-          <a href="https://discord.gg/M5K7TBd" target="_blank">
+          <a href="https://discord.com/invite/VdyCpjQ" target="_blank">
             <span class="sr-only">ClassicUO on Discord</span>
             <i class="fab fa-discord"></i>
           </a>
