--- a/site/.vitepress/theme/custom.css
+++ b/site/.vitepress/theme/custom.css
@@ -32,3 +32,58 @@ ul > li {
 .vp-doc video, img {
   border-radius: 12px;
 }
+
+.VPNavBarSearch {
+  flex-grow: 1;
+  padding-left: 1rem;
+}
+
+.DocSearch-Button {
+  justify-content: flex-start;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  padding: 0 14px 0 12px;
+  width: 100%;
+  height: 40px;
+  background-color: var(--vp-c-bg-soft);
+}
+
+.DocSearch-Button .DocSearch-Button-Key+.DocSearch-Button-Key {
+  border-right: 1px solid var(--vp-c-divider);
+  border-left: none;
+  border-radius: 0 4px 4px 0;
+  padding-left: 2px;
+  padding-right: 6px;
+}
+
+.DocSearch-Button .DocSearch-Button-Key {
+  margin-left: auto;
+  margin-top: 2px;
+  border: 1px solid var(--vp-c-divider);
+  border-right: none;
+  border-radius: 4px 0 0 4px;
+  padding-left: 6px;
+  height: 22px;
+  line-height: 22px;
+  transition: color 0.5s, border-color 0.5s;
+  min-width: 0;
+}
+
+.DocSearch-Button .DocSearch-Button-Placeholder {
+  margin-top: 2px;
+  padding: 0 16px 0 0;
+  font-size: 13px;
+  font-weight: 500;
+  color: var(--vp-c-text-2);
+  transition: color .5s;
+}
+
+.VPPluginSearch-flex-logo {
+  max-height: 36px;
+  filter: grayscale(100%);
+  opacity: 0.8;
+}
+
+.DocSearch-MagnifierLabel {
+  display: none;
+}
